# soc-generator

./: .ci.yml  .flake8  .gitignore  .gitmodules  Makefile  README.md  amaranth_wrapper.py  bios.c  bios.mk  env  generate_soc.py  headers.mk  linker.ld  pyproject.toml  requirements-dev.txt  requirements.txt  sim.cpp  sim_uart.cpp  sim_uart.h  uart_stdio.c  uart_stdio.h  verilator.mk  wishbone_interconnect.py
examples/simple_soc/: Makefile  README.md  requirements.txt
examples/simple_soc/firmware/: bios.c  bios.mk  headers.mk  linker.ld  uart_stdio.h
examples/simple_soc/scripts/: generate_soc.py
examples/simple_soc/sim/: sim_uart.cpp
soc_generator/firmware/: bios.mk  uart_stdio.c
soc_generator/scripts/: __init__.py
soc_generator/sim/: sim.cpp  sim_uart.h  verilator.mk
