# Copyright 2023 Antmicro
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-generator"
version = "0.0.1"
description = "SoC generator - toolkit for parametric generation of systems-on-chip"
authors = [
    {name = "Antmicro Ltd.", email = "contact@antmicro.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "packaging>=23.0",
    "amaranth-yosys",
    "amaranth==0.4.0.*",
    "amaranth-soc",
]

[project.optional-dependencies]
lint = [
    "black==23.3.0",
    "flake8==6.0.0",
    "pep8-naming==0.13.3",
    "isort==5.12.0",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.black]
line-length = 100
exclude = '''
/(
  | \.git
  | \.gitignore
  | \.gitmodules
  | __pycache__
  | venv
  | third_party
  | build
  | \.gitlab-ci-local
  | miniconda3
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    ".git",
    ".gitignore",
    ".gitmodules",
    "__pycache__",
    "venv",
    "third_party",
    "build",
    ".gitlab-ci-local",
    "miniconda3",
]
